// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CenteredRow /> renders without crashing 1`] = `
<div
  className="CenteredRow-sc-1446zpg-0 dFcFNQ"
>
  <span>
    Child 1
  </span>
  <span>
    Child 2
  </span>
</div>
`;

exports[`<CenteredRow /> renders without crashing when stackVertically is passed 1`] = `
<div
  className="CenteredRow-sc-1446zpg-0 bqMlyu"
>
  <span>
    Child 1
  </span>
  <span>
    Child 2
  </span>
</div>
`;
